Changed some css tweaks so that empty tables wont show anymore in the anwb template

--- a/verkeer-plugin/static/css/traffic.css
+++ b/verkeer-plugin/static/css/traffic.css
@@ -86,6 +86,13 @@
     color: orange;
 }
 
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
 /* Style the list */
 ul.tab {
     list-style-type: none;
