--- a/afvalwijzer-plugin/templates/afvalwijzer.html
+++ b/afvalwijzer-plugin/templates/afvalwijzer.html
@@ -11,7 +11,7 @@
       <div class="clearfix"></div>
   </div>
   <div id="afvalwijzerContainer">
-    <div style="float: left;"id="afvalWijzer_{{count}}"></div>
+    <div style="float: left;min-width: 50%;" id="afvalWijzer_{{count}}"></div>
     <div style="float: left;min-width: 50%;" id="afvalWijzer_firstDate_{{count}}"></div>
   </div>
   <div id="_source"><a href="https://www.mijnafvalwijzer.nl">Source: mijnafvalwijzer.nl</a></div>
