--- a/wunderground-plugin/templates/wunderground.html
+++ b/wunderground-plugin/templates/wunderground.html
@@ -66,7 +66,7 @@ $(document).ready(function() {
                         overalDiv = overalDiv + '<div class=""><img src="' + _json['conditions']['current_observation'].icon_url + '"></div>';
                         overalDiv = overalDiv + '<p class="wiText">' + _json['conditions']['current_observation']['icon'] + '</p>';
                         overalDiv = overalDiv + '</div>';
-                        overalDiv = overalDiv + '<p class="wiTemperature">' + _json['conditions']['current_observation']['dewpoint_c'] + '<sup>°C</sup></p>';
+                        overalDiv = overalDiv + '<p class="wiTemperature">' + _json['conditions']['current_observation']['temp_c'] + '<sup>°C</sup></p>';
                         overalDiv = overalDiv + '<div class="wiDetail">';
                         overalDiv = overalDiv + '<p class="wiDay">'+ _json['todayWeekday'] + '</p>';
                         overalDiv = overalDiv + '   </ul>';
