--- a/knmi-plugin/templates/knmi.html
+++ b/knmi-plugin/templates/knmi.html
@@ -1,7 +1,7 @@
 <div class="col-md-4 col-sm-6 col-xs-12">
 <div class="x_panel">
 <div class="x_title">
-<h2 id="s_title_{{ count }}">knmi</h2>
+<h2 id="s_title_knmi_{{ count }}">knmi</h2>
 <ul class="nav navbar-right panel_toolbox">
 <li><a class="close-link"><i class="fa fa-close"></i></a>
 </li>
@@ -12,11 +12,11 @@
 <br>
 {% for k, v in blockArray[count]["knmi"].iteritems() %}
 {% if v[1] %}
-<script> $('#s_title_{{ count }}').html("{{ v[1] }}");</script>
+<script> $('#s_title_knmi_{{ count }}').html("{{ v[0] }}");</script>
 {% endif %}
 <form class="form-horizontal form-label-left" style="width: 80%; height: 80%; ">
 <div class="form-group" style="">
-<img id="knmi_{{ count }}" style="-webkit-user-select: none; width: 100%; height: 100%; " src="{{v[0]|replace('&amp;', '&')}}" >
+<img id="knmi_{{ count }}" style="-webkit-user-select: none; width: 100%; height: 100%; " src="{{v[1]|replace('&amp;', '&')}}" >
 </div>
 </form>
 {% endfor %}
